Fix: Footer padding on pges other than home
In pages other than home, the footer was overlapping with the content.
This commit fixes that issue. Note that the footer padding is not
responsive in this commit. It could be useful to switch to a
responsive value in a future commit if deemed necessary.

This commit also sees a minor change in the Social.view component to
increase readability.

--- a/themes/basakbeykoz/react-src/src/components/layout/canvas/_canvas.layout.scss
+++ b/themes/basakbeykoz/react-src/src/components/layout/canvas/_canvas.layout.scss
@@ -4,10 +4,16 @@
 .Canvas {
   $feature-image_x: get-component-property('feature-image', 'narrow_x_vw');
   $footer-square-size_px: get-component-property('footer', 'square-size_px');
+  $footer__fg-height_max_px: get-component-property(
+    'footer',
+    'fg-height_max_px'
+  );
 
   min-height: calc(
     100vh - #{get-component-property('nav', 'mobile-height_px')} + #{$footer-square-size_px}
   );
+  /// This controls the distance that the footer figures have from the page content. However, to be precise, it could be better to use a value that is responsive in proportion to the responsiveness of the footer -fg element
+  padding-bottom: #{$footer__fg-height_max_px + 100px};
 
   @include breakpoint('w', 'SVGA__') {
     display: grid;
@@ -85,7 +91,8 @@
   &.page {
     /// This section overrides some of the defaults of canvas for wordpress homepage
     &.home {
-      // padding-bottom: 0;
+      padding-bottom: 0;
+
       @include breakpoint('w', 'SVGA__') {
         display: block;
         .Canvas-articleTitle {
